# fffft

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bench.rs  lib.rs  tests.rs
