[package]
name = "fffft"
version = "0.6.0"
authors = ["kwantam <kwantam@gmail.com>"]
edition = "2018"
description = "Number theoretic transform for PrimeField types (from ff crate)"
license = "Apache-2.0"
repository = "https://github.com/kwantam/fffft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.2"
ff = "0.13"
itertools = "0.10"
rayon = "1.5"

[dev-dependencies]
bitvec = "1.0.1"
byteorder = "1"
ff = { version = "0.13", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"
rug = "1"
rug-fft = "0.1"
subtle = "2.2"

[features]
bench = []
